Adds prompts for exercises and their solutions

--- a/04_best_practices.ipynb
+++ b/04_best_practices.ipynb
@@ -463,26 +463,197 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def df_info(df):\n",
-    "    if df is not None:\n",
-    "        column_info = ','.join([f'{col} ({df[col].isnull().sum()} missing)' for col in df])\n",
-    "        return f'rows: {len(df)}, columns: {column_info}'\n",
-    "    else:\n",
-    "        return '<None>'\n",
+    "logger.warning(f'There are {len(activity_df)} activities in the DataFrame')\n",
+    "logger.debug(f'If this line is not visible, restart the notebook kernel')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Exercise__: Create a decorator that logs the number of rows and columns of the DataFrame that is passed to the pipeline functions above. You can use the `@skip_None` and `@check_value` decorators of the previous module as examples.\n",
     "\n",
-    "def pandas_pipe_logging(func):\n",
-    "    @wraps(func)\n",
-    "    def logging_wrapper(*args, **kwargs):\n",
-    "        in_df = args[0]\n",
-    "        logger.debug(f'Calling pipeline function {func.__name__} with input {df_info(in_df)}')\n",
-    "        start = time.time()\n",
-    "        out = func(*args, **kwargs)\n",
-    "        stop = time.time()\n",
-    "        logger.debug(f'Returning dataframe with {df_info(out)}')\n",
-    "        logger.debug(f'Took {stop - start:.4f}s')\n",
-    "        return out\n",
+    "__Bonus Exercise__: Extend this decorator such that it also logs the same information about the DataFrame that is returned by the pipeline function.\n",
     "\n",
-    "    return logging_wrapper"
+    "__Bonus Exercise__: Extend this decorator such that it also logs how many rows are missing for each column. The [`isnull()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.isnull.html) method and `sum()` built-in function may be helpful for this purpose.\n",
+    "\n",
+    "__Bonus Exercise__: Extend this decorator such that it also logs how much time it took to call the decorated pipeline function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/pipe_logging.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the longest run per year?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/longest_run_per_year.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the average (mean) number of hours spent cycling by weekday? It is ok to ignore the days without activity (i.e. these don't need to be counted as 0 for the mean)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/hours_cycling_by_weekday.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are the 10 longest time gaps between activities? The method [`diff()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.diff.html) may be useful for this purpose."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/longest_time_gaps.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are the 7-day periods with the highest total amount of activity (in hours)? Similar to `groupby()`, Pandas has a method [`rolling()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.rolling.html) for using an (aggregating) sliding window. It can even use a flexible time-based window size, given that the DataFrame index is a datetime-like (and sorted)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    pd.DataFrame({'a': range(5), 'b': range(5, 10)})\n",
+    "    .rolling(3).mean()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    pd.DataFrame({'a': range(5), 'b': range(5, 10)})\n",
+    "    .rolling(3, min_periods=1).mean()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/total_time_7days.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe the 20 or 30 runs with highest mean heartrate. Looking at the name and distance, do you see some common pattern? Looking at other columns such as velocity_mean, do you see any activities that are out of the ordinary? Can it be that there are outliers based on measurement errors?\n",
+    "\n",
+    "Try to create an analysis that detects runs with an uncommon combination of mean heartrate and mean velocity, for example, by comparing z values. If you're familiar with Scikit-Learn, consider using one of its outlier detection methods or fitting a (linear) regression and looking for large residuals."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "activity_df.sort_values('heartrate_mean', ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution:"
    ]
   }
  ],
