Elaborates question/discussion

--- a/04_best_practices.ipynb
+++ b/04_best_practices.ipynb
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q: Is this a reliable analysis? What can be improved?"
+    "__Discussion__: Is this a reliable analysis? Which question does it answer? What can be improved?"
    ]
   },
   {
