Adds clarification to prompts

--- a/00_introduction.ipynb
+++ b/00_introduction.ipynb
@@ -76,16 +76,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Study the [API documentation for `.loc[]`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.loc.html), and the [API documentation for `.assign()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.assign.html).\n",
+    "Study the [API documentation for `.loc[]`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.loc.html), and the [API documentation for `.assign()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.assign.html). Think about the following questions (without the need to provide an answer), and try to experiment a bit with the examples given in the docs:\n",
     "\n",
     "- What _is_ `loc[]` exactly? Is it a method or function? Something else entirely?\n",
     "- How does it handle the statements that are passed to these square brackets?\n",
     "- How does it have access to the DataFrame's data?\n",
     "- What is this `lambda` expression?\n",
     "- What is the `df` within the `lambda` expression?\n",
-    "- Is the original `transaction_df` DataFrame modified by the above statement?\n",
-    "\n",
-    "Again, the prompt is not to provide an answer to these questions, but to prepare you for the content of this tutorial."
+    "- Is the original `transaction_df` DataFrame modified by the above statement?"
    ]
   },
   {
@@ -118,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Study the [API documentation for `.groupby()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.groupby.html).\n",
+    "Study the [API documentation for `.groupby()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.groupby.html). Think about the following questions (without the need to provide an answer), and try to experiment a bit with the examples given in the docs:\n",
     "\n",
     "- What is the result of calling `groupby()` on the DataFrame? What is being returned?\n",
     "- How is it possible that we can use that result in a `for ... in` loop?\n",
@@ -148,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Study the [API documentation for `.pipe()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.pipe.html).\n",
+    "Study the [API documentation for `.pipe()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.pipe.html). Think about the following questions (without the need to provide an answer), and try to experiment a bit with the examples given in the docs:\n",
     "\n",
     "- What is being passed as the first argument to `pipe()`?\n",
     "- What object or method or function is actually calling the `select_amounts_greater_than()` function?\n",
