Adds explaining texts about expressions and object basics

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -11,7 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This module covers the foundations of Python, focusing on its use in an interactive environment such as this Jupyter Notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Expressions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Python program, script, or Notebook cell as below, consists of one or more expressions. The expressions in a Notebook cell are evaluated line-by-line, left-to-right, and inside-out in case of nested expressions."
    ]
   },
   {
@@ -24,11 +38,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In case of potentially ambiguous expressions, there is a [hierarchy of operator precedence](https://docs.python.org/3/reference/expressions.html#operator-precedence)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "42 + 1 * 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In a Jupyter Notebook, the evaluation of the last expression in the cell is printed:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "42 + 1\n",
     "sum([1, 2] * 2) + 42"
    ]
   },
@@ -43,7 +81,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Values, types, identifiers, dir()"
+    "All expressions evaluate into an _object_. Every Python object has a _type_, an _identity_, and a _value_.\n",
+    "\n",
+    "The type can be obtained by the `type()` built-in function:"
    ]
   },
   {
@@ -68,7 +108,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[List of built-in functions](https://docs.python.org/3/library/functions.html)"
+    "For your reference, here is the [list of all built-in functions](https://docs.python.org/3/library/functions.html).\n",
+    "\n",
+    "The `id()` built-in function returns an object's identity. The identity can be thought of as a representation of the memory address where this object is stored, but this depends on the Python implementation."
    ]
   },
   {
@@ -87,24 +129,6 @@
    "outputs": [],
    "source": [
     "id(sum)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(sum)"
    ]
   },
   {
@@ -497,6 +521,33 @@
    "outputs": [],
    "source": [
     "k + [10, 11]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(sum)"
    ]
   },
   {
