Adds explaining text about assignment operator

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mutation vs. assignment"
+    "Objects can be assigned to variables"
    ]
   },
   {
@@ -161,6 +161,13 @@
    "outputs": [],
    "source": [
     "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And variables in an expression evaluate to the value of the object assigned to them"
    ]
   },
   {
@@ -186,7 +193,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b??"
+    "__Question__: After assigning a new value to `a`, what exactly happened to `b`? What is its value? (expand the cell below for an explanation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
+    "Regard the memory as a space consisting of uniquely identified storage units:\n",
+    "\n",
+    "<img alt=\"Memory Layout\" src=\"images/var_assignment/var_assignment.001.png\" width=\"600\">\n",
+    "\n",
+    "With the statement\n",
+    "\n",
+    "```python\n",
+    "a = 42\n",
+    "```\n",
+    "\n",
+    "the object `42` is created in one of the storate units, and the variable `a` refers to that object:\n",
+    "\n",
+    "<img alt=\"Memory Layout\" src=\"images/var_assignment/var_assignment.002.png\" width=\"600\">\n",
+    "\n",
+    "With the statement\n",
+    "\n",
+    "```python\n",
+    "b = a\n",
+    "```\n",
+    "\n",
+    "a new label (or variable) `b` is created, which points to the exact same object as `a`:\n",
+    "\n",
+    "<img alt=\"Memory Layout\" src=\"images/var_assignment/var_assignment.003.png\" width=\"600\">\n",
+    "\n",
+    "Finally, with the statement\n",
+    "\n",
+    "```python\n",
+    "a = 1\n",
+    "```\n",
+    "\n",
+    "the existing label (or variable) `a` is now pointing to a newly created object `1`, which is stored in a new storage unit:\n",
+    "\n",
+    "<img alt=\"Memory Layout\" src=\"images/var_assignment/var_assignment.004.png\" width=\"600\">\n",
+    "\n",
+    "Please note that the object `42` in the storage unit with id `123` _was not mutated_! This is regardless of the existance of the variable `b`: if we only had the following statements\n",
+    "```python\n",
+    "a = 42\n",
+    "a = 99\n",
+    "```\n",
+    "the result would have been the creation of the two objects `42` and `99` in memory, with the variable `a` pointing to `99`.\n",
+    "\n",
+    "The conclusion here is that the _assignment operator_ `=` never mutates objects, but rather assigns labels to objects in memory!"
    ]
   },
   {
