Adds parantheses example

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -57,6 +57,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can use parantheses to explicitly indicate which sub-expressions should be evaluated first:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(42 + 1) * 2 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In a Jupyter Notebook, the evaluation of the last expression in the cell is printed:"
    ]
   },
