Adds text + explanation for functions and scopes

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -254,7 +254,7 @@
     "\n",
     "<img alt=\"Memory Layout\" src=\"images/var_assignment/var_assignment.004.png\" width=\"600\">\n",
     "\n",
-    "Please note that the object `42` in the storage unit with id `123` _was not mutated_! This is regardless of the existance of the variable `b`: if we only had the following statements\n",
+    "Please note that the object `42` in the storage unit with id `123` _was not mutated_! This is regardless of the existence of the variable `b`: if we only had the following statements\n",
     "```python\n",
     "a = 42\n",
     "a = 99\n",
@@ -286,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scopes, labels->objects, namespaces"
+    "To prevent repeating sequences of similar statements, we can organize our code by defining functions using the `def` [keyword](https://docs.python.org/3/reference/lexical_analysis.html#keywords):"
    ]
   },
   {
@@ -300,12 +300,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function defines one _positional_ argument `x` and can be _called_ by using parantheses:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "add_one(42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The positional arguments are required: omitting them or providing unexpected arguments will result in a `TypeError`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_one(42, 99)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A function returns the evaluation of the expression directly following any `return` keyword. In case of no `return` keywords in a function body, `None` is implicitly returned from the function.\n",
+    "\n",
+    "_Gotcha for R users:_ In R, the evaluation of the last expression in a function is returned implicitly in case of no explicit return, which is a different default behavior than in Python!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In some cases (details will follow later), a function has access to variables defined outside of its body:"
    ]
   },
   {
@@ -329,6 +377,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try to re-assign `n` to a new value from within a function:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -349,10 +404,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "n??"
+    "This may come as a surprise: our 'global' `n` did not change! Using the `global` keyword within the function body, we have a way to reassign `n`: "
    ]
   },
   {
@@ -374,6 +438,13 @@
    "outputs": [],
    "source": [
     "add_and_change_n_global(42), n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try to reassign the positional argument passed to a function:"
    ]
   },
   {
@@ -401,14 +472,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "x??"
+    "__Question(s)__: \n",
+    "\n",
+    "- What is the value of `x` after calling the function?\n",
+    "- What was passed to `change_or_not()`? Was it the exact same object? Or a copy? How can we find out?\n",
+    "- What is happening at the statement `x = 100` within the function body? Reassignment of the existing `x`? Creation of a new object?\n",
+    "\n",
+    "Expand the hidden cells below for explanations:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def change_or_not(x):\n",
+    "    print(id(x))\n",
+    "    x = 100\n",
+    "    print(id(x))\n",
+    "    return x\n",
+    "\n",
+    "id(x), id(change_or_not(x)), id(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# The name of the argument doesn't matter:\n",
+    "def change_or_not(foo):\n",
+    "    print(id(foo))\n",
+    "    foo = 100\n",
+    "    print(id(foo))\n",
+    "    return foo\n",
+    "\n",
+    "id(x), id(change_or_not(x)), id(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
+    "Just as in the previous example about assignments, the statement\n",
+    "```python\n",
+    "x = 1234\n",
+    "````\n",
+    "creates an integer object `1234` in memory. But there are some important details about what's exactly happening: every piece of Python code is run in an _execution frame_. The subdivision of Python code into such execution frames is explained in [the documentation](https://docs.python.org/3/reference/executionmodel.html) and too detailed for this tutorial.\n",
+    "\n",
+    "What's important in this case is that the body of a function always runs in a different execution frame than the code block that declares or calls the function (which in this example is the Jupyter Notebook itself). Each of these execution frames is associated with a _scope_, which defines the visibility and resolution of names (i.e. variables).\n",
+    "\n",
+    "So when we assign `1234` to `x` in our notebook cell, the name `x` is available on the global (i.e. notebook) scope:\n",
+    "\n",
+    "<img alt=\"Global scope assignment\" src=\"images/scopes/scopes.001.png\" width=\"600\">\n",
+    "\n",
+    "When we call our function with\n",
+    "```python\n",
+    "change_or_not(x)\n",
+    "```\n",
+    "the same name `x` is also created in the function scope. Names are resolved using the nearest enclosing scope, so any usage of the variable name `x` within the function body will refer to whatever object is passed to the function as argument. Looking at the functions with debug prints above, realize that our function-scoped `x` points to the exact same object as the globally scoped `x`.\n",
+    "\n",
+    "<img alt=\"Function scope assignment\" src=\"images/scopes/scopes.002.png\" width=\"600\">\n",
+    "\n",
+    "Finally, the assignment `x=100` within the function body assigns a new integer object `100` to the name `x` _within the function scope_. This is the reason that the assignment within the function did not reassign the variable in the enclosing scope.\n",
+    "\n",
+    "<img alt=\"Function scope reassignment\" src=\"images/scopes/scopes.003.png\" width=\"600\">\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What was passed to `change_or_not()`? Was it the exact same object? Or a copy? How can we find out?"
+    "What happens when we declare names within a function scope? Are these also visible in the outer scope (after calling the function)?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_y_visible(x):\n",
+    "    y = 42\n",
+    "    return y + x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_y_visible(10)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Besides positional arguments, we can also provide (optional) keyword arguments to functions. These must have default values and are defined as follows:"
    ]
   },
   {
@@ -428,6 +605,50 @@
    "outputs": [],
    "source": [
     "add_optional(42, sub=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Default values of keyword arguments can also be variables, but there's an important gotcha!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 99\n",
+    "def add(x, y=a):\n",
+    "    return x + y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 0\n",
+    "add(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, the binding of the value of `a` to the keyword argument `y` happens _only at the time when the function is defined_, and does not take into account runtime changes to `a` afterwards!"
    ]
   },
   {
