--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -662,9 +662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "List, Tuple, Set, Dict\n",
-    "\n",
-    "References, mutability, in functions, addition/union/appending"
+    "So far, we looked at simple numeric objects. Python offers different container types to hold collections of objects."
    ]
   },
   {
@@ -672,6 +670,13 @@
    "metadata": {},
    "source": [
     "### List"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lists are created and indexed using square-bracket notation:"
    ]
   },
   {
@@ -693,6 +698,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `:` (slice) operator allows us to retrieve arbitrary slices from a list:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -708,6 +720,15 @@
    "outputs": [],
    "source": [
     "l[:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slicing in general uses a syntax of `[from_index:to_index:step_size]`, where `to_index` is not included in the result. When using a negative step size, the list is traversed from end to beginning, and the slice also expects the `from_index` and `to_index` to go from high to low index values.\n",
+    "\n",
+    "_Gotcha for R users_: List indexing (and in general indexing of all iterable object types) always starts with `0`."
    ]
   },
   {
@@ -756,6 +777,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is possible to assign list elements to new objects:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -771,8 +799,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "l = [1, 2]\n",
     "m = l\n",
-    "m[2] = 100\n",
+    "m[0] = 42\n",
     "m"
    ]
   },
@@ -780,7 +809,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`l`??"
+    "__Question__: What is the value of `l`? Did it change?\n",
+    "\n",
+    "Expand the cell below for an explanation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
+    "By assigning `[1, 2]` to `l`, a new _list_ object was created in memory:\n",
+    "\n",
+    "<img alt=\"List creation\" src=\"images/containers/containers.001.png\" width=\"600\">\n",
+    "\n",
+    "Because this is a container object, the list does not hold the actual values, but rather (nameless) references to the actual values. We'll learn later how these square brackets are used to look up values for any kind of container object.\n",
+    "\n",
+    "When we assign the value of `l` to `m`, we only created another name that refers to the same object:\n",
+    "\n",
+    "<img alt=\"List creation\" src=\"images/containers/containers.002.png\" width=\"600\">\n",
+    "\n",
+    "Through the statement\n",
+    "```python\n",
+    "m[0] = 42\n",
+    "```\n",
+    "we assign a new integer object `42` to the first element of our list object:\n",
+    "\n",
+    "<img alt=\"List creation\" src=\"images/containers/containers.003.png\" width=\"600\">\n",
+    "\n",
+    "Please note that this assignment did _not_ create a new list object: we _mutated_ the existing list by reassigning one of its members to a new object. Every variable referring to this list object will see the changes that were made."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What's the result type of slicing a list?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(l[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is it a _copy_ or a _view_? What happens when we try to mutate the slice result?"
    ]
   },
   {
@@ -793,10 +885,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`l`??"
+    "Several built-in functions can handle list objects in an intuitive way:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(l), sum(l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once created, we can append elements to a list using the `append()` _method_. Note the different syntax using the `.` operator, compared to using the built-in functions. The next module about Object-Oriented Programming will provide more details about the difference between functions and methods."
    ]
   },
   {
@@ -811,12 +928,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `+` operator is used to concatenate two lists:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "k + [10, 11]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Besides `append()`, what other methods for our list object can we use? The `dir()` built-in function provides a list of all the _attributes_ of an object."
    ]
   },
   {
@@ -854,6 +985,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A tuple is a container object very similar to a list. It is created using parantheses instead of square brackets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -868,7 +1006,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "t1 = (1)\n",
+    "t1, type(t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = (1,)\n",
+    "t1, type(t1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tuples are indexed and sliced just like lists:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "t[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t[:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But modifying tuples seems to be problematic:"
    ]
   },
   {
@@ -890,12 +1071,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above shows the difference between tuples and lists: tuples are _immutable_. Once created, it is not allowed to reassign elements to new objects or append elements to tuples.\n",
+    "\n",
+    "__Question__: If tuples are immutable, why is it ok to concatenate them, as shown below?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "t + (10, 11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also note that immutability only goes as far as not allowing to mutate the tuple itself. If the tuple is a container for objects that are mutable themselves (such as lists, see the example below), these mutable contained objects can still be changed."
    ]
   },
   {
@@ -923,6 +1120,13 @@
    "metadata": {},
    "source": [
     "### Set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sets are collections of unique values. When constructing them from any collection of non-unique values, de-duplication is automatic:"
    ]
   },
   {
@@ -954,6 +1158,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sets can be mutated by adding elements:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -961,6 +1172,13 @@
    "source": [
     "s.add('d')\n",
     "s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A set's elements do not have order, so indexing does not make much sense:"
    ]
   },
   {
@@ -973,11 +1191,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some useful (and non-mutating) operations on sets are _union_, _intersection_ and _difference_:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "s = {'a', 'b', 'c'}\n",
     "s | {'a', 'd', 'b'}"
    ]
   },
@@ -1007,12 +1233,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dictionaries are used to efficiently look up values based on keys"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "d = {'foo': 42, 'bar': 21}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using square brackets, the value for the corresponding key is returned:"
    ]
   },
   {
@@ -1034,12 +1274,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To prevent `KeyError`s for non-existing keys, there is a `get()` method that allows us to define default fall-back return values."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "d.get('baz', 99)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As with lists, we can assign a new value to a key using the `[]` notation:"
    ]
   },
   {
@@ -1053,6 +1307,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above also works for keys that don't (yet) exist in the dictionary:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1060,6 +1321,13 @@
    "source": [
     "d['baz'] = 21\n",
     "d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The union of two dicts is similar to sets:"
    ]
   },
   {
@@ -1072,12 +1340,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An alternative (pre Python 3.9) approach to merge two dicts (these `**` operators are explained later):"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "{**d, **{'x': 1}}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There's also a mutating `update()` method:"
    ]
   },
   {
@@ -1093,7 +1375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Diff? Was `d` modified?"
+    "And the following methods allow to iterate over a dict's keys, values and items:"
    ]
   },
   {
@@ -1110,6 +1392,13 @@
    "metadata": {},
    "source": [
     "### String"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A string can be seen as a special kind of list that holds characters:"
    ]
   },
   {
@@ -1151,12 +1440,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In modern Python (> 3.5), the most convenient way to \"glue together\" (a.k.a. \"formatting\") strings with data from variables is to use \"f-Strings\":"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "f'foo{b}baz'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more details about these, see [this great article](https://realpython.com/python-f-strings/) at Real Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And, by the way, Strings are immutable:"
    ]
   },
   {
@@ -1173,13 +1483,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: explain `Iterable`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Useful Keywords and Builtin Functions"
    ]
   },
@@ -1189,7 +1492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l, 1 in l, 2 in l"
+    "l, 1 in l, 101 in l"
    ]
   },
   {
@@ -1225,7 +1528,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "t = (1, 2, 3)\n",
     "t, sum(t), max(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When putting objects of different types in containers, prepare to meet unexpected behavior:"
    ]
   },
   {
