Adds text explaining code snippets about object equality

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -1565,6 +1565,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python has two different checks of object equality:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1572,6 +1579,13 @@
    "source": [
     "l1 = [1, 2, 3]\n",
     "l2 = l1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Equality by _value_ is checked using the `==` operator:"
    ]
   },
   {
@@ -1584,12 +1598,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Equality by _identity_ is checked using the `is` keyword. Objects that are equal by identity do not just have the same value, but are the _exact same object_."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1 is l2"
+    "l1 is l2, id(l1) == id(l2)"
    ]
   },
   {
@@ -1621,6 +1642,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even though `l1` and `l2` are not the same object, their elements can be!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1[0] is l2[0]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1629,6 +1666,13 @@
     "a = 999\n",
     "b = 999\n",
     "a is b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For some values of immutable types, Python _may_ reuse objects for performance reasons:"
    ]
   },
   {
@@ -1661,17 +1705,6 @@
    "source": [
     "a = '_'.join([str(i) for i in range(100)])\n",
     "b = '_'.join([str(i) for i in range(100)])\n",
-    "a is b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = (1, 2, 3)\n",
-    "b = (1, 2, 3)\n",
     "a is b"
    ]
   },
