Adds prompts for mutation quiz

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -1712,7 +1712,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## (Im)Mutability"
+    "## Mutation or No Mutation Quiz"
    ]
   },
   {
@@ -1740,7 +1740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`l1`??"
+    "__Question__: Has `l1` changed after calling `foo()`?"
    ]
   },
   {
@@ -1768,7 +1768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`l2`??"
+    "__Question__: Has `l2` changed after calling `bar()`?"
    ]
   },
   {
