Adds text explaining unpacking operators

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -1779,6 +1779,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Any object that holds a collection (such as instances of the container types discussed above) and allows iteration over its elements is called an Iterable. The elements of an Iterable can be _unpacked_ by assigning them to multiple variables in a single statement."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1807,6 +1814,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you don't know how many values you can expect, you can use the prefix `*` operator to capture a variable number of elements into a single variable:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1824,6 +1838,13 @@
    "source": [
     "a, *b, c = [1, 2, 3]\n",
     "a, b, c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use this operator to unpack an Iterable into function arguments:"
    ]
   },
   {
@@ -1846,14 +1867,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def bar(x, *args):\n",
-    "    print(f'x: {x}')\n",
-    "    print(f'arg: {args}')"
+    "... or pass a variable number of arguments to a function:"
    ]
   },
   {
@@ -1862,7 +1879,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foo(*[1, 2, 3])"
+    "def bar(x, *args):\n",
+    "    print(f'x: {x}')\n",
+    "    print(f'args: {args}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bar(*[1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There's a similar `**` prefix operator that unpacks dictionaries into keyword arguments:"
    ]
   },
   {
@@ -1882,6 +1917,40 @@
    "outputs": [],
    "source": [
     "baz(42, *[1, 2, 3], **{'f': 42, 'g': 99})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baz(*[1, 2, 3], *[4, 5], **{'f': 42}, **{'g': 99})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The unpacking operators can also be used to merge several Iterables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[*[1, 2, 3], *[4, 5]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{**{'a': 1, 'b': 2}, **{'c': 3}}"
    ]
   },
   {
