Adds explaining text for sections on control flow and comprehensions

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -1961,6 +1961,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although Python has the necessary [control flow constructs](https://docs.python.org/3/reference/compound_stmts.html), they don't need to be used in most cases. Often (list) comprehensions (explained later) offer more readable alternatives."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1970,10 +1977,19 @@
     "\n",
     "if x < 100:\n",
     "    y = 1\n",
-    "else:\n",
+    "elif x < 200:  # elif is optional\n",
     "    y = 2\n",
+    "else:  # else is optional\n",
+    "    y = 3\n",
     "\n",
     "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of writing an explicit control flow as above, the same behavior can be achieved using an expression:"
    ]
   },
   {
@@ -1999,6 +2015,13 @@
     "    even_numbers += 1 if x % 2 == 0 else 0\n",
     "\n",
     "even_numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Typical filtering, mapping, or reducing applications are often more readable using comprehensions. Manually iterating over elements to apply some operation to them is considered not Pythonic. One of the valid use cases for explicit `for` or `while` loops is when every iteration involves some side-effect such as reading from a file or database:"
    ]
   },
   {
@@ -2031,6 +2054,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comprehensions are expressions for building new Iterables from existing ones and are best explained using an example:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2040,12 +2070,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The general syntax is `[build_expression FOR var IN iterable IF filter_expression]`, where `build_expression` and `filter_expression` can refer to `var`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "[elt * 2 for elt in [1, 2, 3] if elt <= 2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The iterable in a comprehension can have nested iterables:"
    ]
   },
   {
@@ -2064,12 +2108,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... which can be unpacked and assigned to meaningful variable names:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "{user_id: {'name': user_name, 'items_bought': items_bought} for user_id, user_name, items_bought in user_tuples}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the use of `{}` for the last comprehensions above: these are _dict comprehensions_. A final example of a dict comprehension using a filter:"
    ]
   },
   {
